executor: add base tests
.github actions: add tests and lint

.github actions: fix actions

.github actions: fix actions

.github actions: fix actions

http_require_content_json: move unnamed struct to the file

http_require_content_json: govet fixed

type(Duration): add test

Executor.Simple: add test

HttpArgsRequireStatus: add test

HttpArgsRequireHeader: add test

HttpArgsRequireContentType: add test

HttpArgsRequireContentJSON: add test

executor: move all structures to internal, to separate Executor interface and validators

HttpArgsRequireContent: add test;
tests: fixed

Executor.HttpArgs: add Require.Header validation

Docker: build stage fixed - add Version, Commit and CreatedAt values.

Executor.Http: add base tests

TestHttpArgsRequireHeader_Match: fix test

TestExecutor_Http: add tests

docker-compose.yml: removed unnecessary

auto-test: fix go version

--- a/example.yaml
+++ b/example.yaml
@@ -59,15 +59,13 @@ groups:
         type: http
         args:
           - method: GET
-            url: 'https://hub.docker.com/r/spyzhov/healthy'
+            url: 'https://hub.docker.com/v2/repositories/spyzhov/healthy/'
             timeout: 3s
             require:
               status:
                 eq: 200
               content:
-                html:
-                  - xpath: //title
-                    not_match: ['Page Not Found - Docker Hub']
+                type: JSON
 
 frontend:
   script:
