--- a/example.yaml
+++ b/example.yaml
@@ -66,6 +66,41 @@ groups:
                 eq: 200
               content:
                 type: JSON
+      - name: '[worldtimeapi.org] odd sec'
+        type: http
+        args:
+          - method: GET
+            url: 'http://worldtimeapi.org/api/ip'
+            require:
+              status:
+                eq: 200
+              content:
+                type: JSON
+                JSON:
+                  - jsonpath: '$.datetime'
+                    match: ['(\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d[1,3,5,7,9]\.\d+\+\d{2}:\d{2})']
+  - name: Not stable resources
+    validate:
+        - name: 'Retry: [worldtimeapi.org] odd sec'
+          type: repeat
+          args:
+            - count: 5
+              delay: 1s
+              require:
+                success: 3
+                warning: 1
+            - type: http
+              args:
+                - method: GET
+                  url: 'http://worldtimeapi.org/api/ip'
+                  require:
+                    status:
+                      eq: 200
+                    content:
+                      type: JSON
+                      JSON:
+                        - jsonpath: '$.datetime'
+                          match: ['(\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d[1,3,5,7,9]\.\d+\+\d{2}:\d{2})']
 
 frontend:
   script:
