--- a/example.yaml
+++ b/example.yaml
@@ -101,6 +101,38 @@ groups:
                       JSON:
                         - jsonpath: '$.datetime'
                           match: ['(\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d[1,3,5,7,9]\.\d+\+\d{2}:\d{2})']
+  - name: Database
+    validate:
+        - name: 'Postgresql: healthy'
+          type: sql
+          args:
+            - driver: postgres
+              url: "postgres://postgres:postgres@postgres:5432/postgres?sslmode=disable"
+              sql: 'SELECT 1'
+              require:
+                count:
+                  eq: 1
+                rows:
+                  - [1]
+                value:
+                  - row: 0
+                    column: 0
+                    numeric:
+                      eq: 1
+        - name: 'Postgresql: table exists'
+          type: sql
+          args:
+            - driver: postgres
+              url: "postgres://postgres:postgres@postgres:5432/postgres?sslmode=disable"
+              sql: "SELECT to_regclass('public.example');"
+              require:
+                count:
+                  eq: 1
+                value:
+                    - row: 0
+                      column: 0
+                      text:
+                        not_match: ['NULL']
 
 frontend:
   script:
